# ember

./: .gitignore  .gitmodules  CLAUDE.md  README.md  build_msvc.bat  build_prod.bat  build_tauri.bat  dev.bat
.app-analyzer/: sitemap.json
.content-strategy/: 01-scope.md  02-audit.md  03-plan.md  04-changes.md  05-report.md
.deep-dive/: 01-structure.md  02-interfaces.md  07-final-report.md  state.json  targeted-context-commands.md  targeted-coordinator.md  targeted-prompts.md  targeted-rendering.md
.tauri-pipeline/: 00-scope.md  01-rust-review.md  02-tauri-optimization.md  03-react-performance.md  04-layout.md  05-polish.md  (+2 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/data/prompts/: claudione.md  pragmatic-personality.md
app/src-tauri/data/themes/: default-light.json  default.json  dracula.json  finger-paint-light.json  finger-paint.json  github-universe.json  green-as-a-whistle-light.json  green-as-a-whistle.json  light-solarized.json  lucid-light.json  lucid.json  matrix.json  mojave-light.json  mojave.json  monkey-light.json  monkey.json  night-sky.json  nova.json  one-light.json  one.json  polar-ice-light.json  polar-ice.json  right-in-the-teals-light.json  right-in-the-teals.json  rivet-light.json  rivet.json  seti.json  shoulder-pads-light.json  shoulder-pads.json  solarized-light.json  solarized.json
app/src-tauri/permissions/: default.toml
app/src-tauri/src/: autocomplete.rs  claude.rs  commands.rs  logging.rs  main.rs  marketplace.rs  projects.rs  pty.rs  session.rs  sidecar.rs  tools.rs
(+138 files in other folders)
