[package]
name = "claude-launcher"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
win32job = "2"
which = "7"
dirs = "6"
regex-lite = "0.1"
base64 = "0.22"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
panic = "abort"
